<resources>
    <string name="app_name">MoneyTrack</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Thiện Quất</string>
    <string name="nav_header_subtitle">quatbathien123@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="step1_title">MONEYTRACK - Kiểm soát chi tiêu một cách thông minh hơn</string>
    <string name="step2_title">Organize your thougts</string>
    <string name="step3_title">Create cards and easy styling</string>
    <string name="step1_content">Trở thành người quản lý tiền thông minh
Khiến mọi khoản chi tiêu đều mang lại giá trị.</string>
    <string name="step2_content">Most beautiful note taking application.</string>
    <string name="step3_content">Making your content legible has never been easier.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="already_have_an_account">Đã có tài khoản</string>
    <string name="next">Tiếp tục</string>
    <string name="nav_transaction">Giao dịch</string>
    <string name="nav_home">Trang chủ</string>
    <string name="nav_budget">Mục tiêu</string>
    <string name="nav_menu">Menu</string>
    <string name="from_date">từ ngày</string>
    <string name="to_date">đến ngày</string>
    <string name="today">Hôm nay</string>
    <string name="search">tìm kiếm</string>
    <string name="default_category_text">Chọn danh mục</string>
    <string name="default_wallet_text">Chọn ví</string>
</resources>