<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:context=".view.ui.transaction.TransactionFragment">


        <Button
            android:id="@+id/from_date"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/from_date"
            android:textColor="@color/black"
            android:textSize="14dp"
            app:icon="@drawable/ic_angle_small_down"
            app:iconSize="20dp"
            app:iconTint="@color/blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/to_date"
            app:strokeColor="@color/stroke_color"
            app:strokeWidth="1dp" />

        <Button
            android:id="@+id/to_date"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@+id/from_date"
            app:layout_constraintTop_toTopOf="parent"
            android:backgroundTint="@color/white"
            android:text="@string/to_date"
            android:textColor="@color/black"
            android:textSize="14dp"
            app:icon="@drawable/ic_angle_small_down"
            app:iconSize="20dp"
            app:iconTint="@color/blue"
            app:strokeColor="@color/stroke_color"
            app:strokeWidth="1dp" />

        <ImageButton
            android:id="@+id/transaction_filter"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            android:background="@drawable/button_icon"

            app:layout_constraintBottom_toBottomOf="@+id/to_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/to_date" />

        <ImageButton
            android:id="@+id/bt_search"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/to_date" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ev_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/search"
            android:textColorHint="@color/blue"
            android:background="@drawable/search_background"
            android:paddingStart="20dp"
            app:layout_constraintEnd_toStartOf="@+id/bt_cancel"
            app:layout_constraintStart_toEndOf="@+id/bt_search"
            app:layout_constraintTop_toTopOf="@+id/bt_search" />

        <TextView
            android:id="@+id/bt_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:inputType="textCapSentences"
            android:text="Huỷ"
            android:textColor="@color/text_blue"
            android:textSize="13dp"
            android:gravity="right"
            android:textAlignment="gravity"
            app:layout_constraintBottom_toBottomOf="@+id/bt_search"
            app:layout_constraintEnd_toEndOf="@+id/transaction_filter"
            app:layout_constraintStart_toStartOf="@+id/transaction_filter"
            app:layout_constraintTop_toTopOf="@+id/bt_search" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/rv_date_transaction"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/bt_search"
            tools:listitem="@layout/item_date_transaction"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:itemCount="5"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>